Updated web page

--- a/about.html
+++ b/about.html
@@ -35,11 +35,20 @@
 
     <div class="container">
       <section id="main_content">
-		<h1>News/Updates</h1>
+		<h1>About-Us</h1>
+		<div class="block_item">
+			<h2 style="line-height: 1em">Durell Plunkett</h2>
+			<p>Job Description: Project leader, researcher, coder, tester</p>
+			<p>Contact Information: <a href="mailto:dplunk4@lsu.edu">Email dplunk4@lsu.edu</a></p>
+			<p>About: Durell Plunkett is a computer science undergrad at LSU.</p>
+	    </div>
         <div class="block_item">
-			<h2 style="line-height: 1em">March 16, 2014</h2>
-			<p style="color: #FFFFFF">Website is up and running. Project phase 1 commencing. More content 
-				will be added to the website as the project progresses.
+			<h2 style="line-height: 1em">Son Pham</h2>
+			<p>Job Description: Webmaster, researcher, coder, tester</p>
+			<p>Contact Information: <a href="mailto:spham5@lsu.edu">Email spham5@lsu.edu</a></p>
+			<img src="images/son.jpg" style="float: left"/>
+			<p style="position: relative; left: 10px; bottom: 0px;">About: Son Pham is a computer science undergrad at LSU. He has a bit of proficiency in Java
+			    as well as minor experience in web design, JavaScript, and shell programming.
 			</p>
 	    </div>
       </section>
