--- a/description.html
+++ b/description.html
@@ -35,12 +35,21 @@
 
     <div class="container">
       <section id="main_content">
-		<h1>News/Updates</h1>
+		<h1>Project-Description</h1>
+		<p>Project Name: Mission Launch</p>
         <div class="block_item">
-			<h2 style="line-height: 1em">March 16, 2014</h2>
-			<p style="color: #FFFFFF">Website is up and running. Project phase 1 commencing. More content 
-				will be added to the website as the project progresses.
+			<h2 style="line-height: 1em">General Description</h2>
+			<p>The purpose of this project is to design an application 
+				that finds and optimizes the most efficient way to launch a space probe to different
+				planets. The project is for educational purposes only and will start off as something
+				primitive and simple. We hope to, later on, add more functionality to simulate real
+				life conditions to give users a general idea of how capable current technology is for
+				space exploration.
 			</p>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">How to Use the Program</h2>
+			<p>To be added later on as the project progresses.</p>
 	    </div>
       </section>
     </div>
