--- a/schedule.html
+++ b/schedule.html
@@ -35,12 +35,41 @@
 
     <div class="container">
       <section id="main_content">
-		<h1>News/Updates</h1>
+		<h1>Schedule</h1>
         <div class="block_item">
-			<h2 style="line-height: 1em">March 16, 2014</h2>
-			<p style="color: #FFFFFF">Website is up and running. Project phase 1 commencing. More content 
-				will be added to the website as the project progresses.
-			</p>
+			<h2 style="line-height: 1em">Phase 1</h2>
+			<p>Estimated Deadline: March 23, 2014</p>
+			<p>Establish relevant sources of data.</p>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">Phase 2</h2>
+			<p>Estimated Deadline: April 1, 2014</p>
+			<p>Generate user stories.</p>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">Phase 3</h2>
+			<p>Estimated Deadline: April 4, 2014</p>
+			<p>Choose platform and language for project program development.</p>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">Phase 4</h2>
+			<p>Estimated Deadline: April 16, 2014</p>
+			<p>Create CRC cards, class diagrams, and flow charts for program design.</p>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">Phase 5</h2>
+			<p>Estimated Deadline: April 26, 2014</p>
+			<p>Finalize coding and testing.</p>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">Phase 6</h2>
+			<p>Estimated Deadline: May 2, 2014</p>
+			<p>Finalize debugging and profiling.</p>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">Phase 7</h2>
+			<p>Estimated Deadline: May 5, 2014</p>
+			<p>Finalize preparations for in-class project presentation.</p>
 	    </div>
       </section>
     </div>
