--- a/sources.html
+++ b/sources.html
@@ -35,12 +35,10 @@
 
     <div class="container">
       <section id="main_content">
-		<h1>News/Updates</h1>
+		<h1>Sources</h1>
+		<p>The following are links to sources that we're using for our project's research:</p>
         <div class="block_item">
-			<h2 style="line-height: 1em">March 16, 2014</h2>
-			<p style="color: #FFFFFF">Website is up and running. Project phase 1 commencing. More content 
-				will be added to the website as the project progresses.
-			</p>
+			<h2 style="line-height: 1em">Web Sources</h2>
 	    </div>
       </section>
     </div>
