Updated website, added research notes

--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
 			<span class="simple_link"><a href="index.html">News/Updates<a/></span>
 			<span class="simple_link"><a href="description.html">Project-Description<a/></span>
 			<span class="simple_link"><a href="schedule.html">Schedule<a/></span>
+			<span class="simple_link"><a href="journal.html">Journal<a/></span>
 			<span class="simple_link"><a href="about.html">About-Us<a/></span>
-			<span class="simple_link"><a href="sources.html">Sources<a/></span>
 		</div>
 		<hr/>
         <section id="downloads">
@@ -38,14 +38,15 @@
 		<h1>About-Us</h1>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Durell Plunkett</h2>
-			<p>Job Description: Project leader, researcher, coder, tester</p>
-			<p>Contact Information: <a href="mailto:dplunk4@lsu.edu">Email dplunk4@lsu.edu</a></p>
-			<p>About: Durell Plunkett is a computer science undergrad at LSU.</p>
+			<p>Job Description: Project leader, head researcher, coder, tester</p>
+			<p>Contact Information: <a href="mailto:dplunk4@lsu.edu">Email - dplunk4@lsu.edu</a></p>
+			<p>About: Durell Plunkett is a computer science undergrad at LSU. He is also the only one on the
+			team with knowledge on physics. His programming experience includes Python and Java.</p>
 	    </div>
         <div class="block_item">
 			<h2 style="line-height: 1em">Son Pham</h2>
 			<p>Job Description: Webmaster, researcher, coder, tester</p>
-			<p>Contact Information: <a href="mailto:spham5@lsu.edu">Email spham5@lsu.edu</a></p>
+			<p>Contact Information: <a href="mailto:spham5@lsu.edu">Email - spham5@lsu.edu</a></p>
 			<img src="images/son.jpg" style="float: left"/>
 			<p style="position: relative; left: 10px; bottom: 0px;">About: Son Pham is a computer science undergrad at LSU. He has a bit of proficiency in Java
 			    as well as minor experience in web design, JavaScript, and shell programming.
