--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			<span class="simple_link"><a href="index.html">News/Updates<a/></span>
 			<span class="simple_link"><a href="description.html">Project-Description<a/></span>
 			<span class="simple_link"><a href="schedule.html">Schedule<a/></span>
+			<span class="simple_link"><a href="journal.html">Journal<a/></span>
 			<span class="simple_link"><a href="about.html">About-Us<a/></span>
-			<span class="simple_link"><a href="sources.html">Sources<a/></span>
 		</div>
 		<hr/>
         <section id="downloads">
@@ -36,6 +36,14 @@
     <div class="container">
       <section id="main_content">
 		<h1>News/Updates</h1>
+		<div class="block_item">
+			<h2 style="line-height: 1em">March 23, 2014</h2>
+			<p style="color: #FFFFFF">Changed the Sources section to Journal.
+			</p>
+			<p style="color: #FFFFFF">Gathered some valuable information for the project. The team journal
+				has been updated to include these sources and what we've done for the week.
+			</p>
+	    </div>
         <div class="block_item">
 			<h2 style="line-height: 1em">March 16, 2014</h2>
 			<p style="color: #FFFFFF">Website is up and running. Project phase 1 commencing. More content 
