--- a/schedule.html
+++ b/schedule.html
@@ -21,8 +21,8 @@
 			<span class="simple_link"><a href="index.html">News/Updates<a/></span>
 			<span class="simple_link"><a href="description.html">Project-Description<a/></span>
 			<span class="simple_link"><a href="schedule.html">Schedule<a/></span>
+			<span class="simple_link"><a href="journal.html">Journal<a/></span>
 			<span class="simple_link"><a href="about.html">About-Us<a/></span>
-			<span class="simple_link"><a href="sources.html">Sources<a/></span>
 		</div>
 		<hr/>
         <section id="downloads">
