Updated website information for March 26

--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@
         <h2 align="center">CSC2700 Final Project</h2>
 		<hr/>
 		<div id="links">
-			<span class="simple_link"><a href="index.html">News/Updates<a/></span>
-			<span class="simple_link"><a href="description.html">Project-Description<a/></span>
-			<span class="simple_link"><a href="schedule.html">Schedule<a/></span>
-			<span class="simple_link"><a href="journal.html">Journal<a/></span>
-			<span class="simple_link"><a href="about.html">About-Us<a/></span>
+			<span class="simple_link"><a href="index.html">News/Updates</a></span>
+			<span class="simple_link"><a href="description.html">Project-Description</a></span>
+			<span class="simple_link"><a href="schedule.html">Schedule</a></span>
+			<span class="simple_link"><a href="journal.html">Journal</a></span>
+			<span class="simple_link"><a href="about.html">About-Us</a></span>
 		</div>
 		<hr/>
         <section id="downloads">
