--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <h2 align="center">CSC2700 Final Project</h2>
 		<hr/>
 		<div id="links">
-			<span class="simple_link"><a href="index.html">News/Updates<a/></span>
-			<span class="simple_link"><a href="description.html">Project-Description<a/></span>
-			<span class="simple_link"><a href="schedule.html">Schedule<a/></span>
-			<span class="simple_link"><a href="journal.html">Journal<a/></span>
-			<span class="simple_link"><a href="about.html">About-Us<a/></span>
+			<span class="simple_link"><a href="index.html">News/Updates</a></span>
+			<span class="simple_link"><a href="description.html">Project-Description</a></span>
+			<span class="simple_link"><a href="schedule.html">Schedule</a></span>
+			<span class="simple_link"><a href="journal.html">Journal</a></span>
+			<span class="simple_link"><a href="about.html">About-Us</a></span>
 		</div>
 		<hr/>
         <section id="downloads">
@@ -36,6 +36,13 @@
     <div class="container">
       <section id="main_content">
 		<h1>News/Updates</h1>
+		<div class="block_item">
+			<h2 style="line-height: 1em">March 26, 2014</h2>
+			<p style="color: #FFFFFF">A screen shot from our prototype showing a simulation of planet orbits
+			using <a href="http://mhuss.com/AstroLib/">AstroLib</a> to get planetary positions. The sun and planets are not to scale.
+			</p>
+			<img src="images/planet_orbits.jpg"/>
+	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">March 23, 2014</h2>
 			<p style="color: #FFFFFF">Changed the Sources section to Journal.
