--- a/journal.html
+++ b/journal.html
@@ -18,11 +18,11 @@
         <h2 align="center">CSC2700 Final Project</h2>
 		<hr/>
 		<div id="links">
-			<span class="simple_link"><a href="index.html">News/Updates<a/></span>
-			<span class="simple_link"><a href="description.html">Project-Description<a/></span>
-			<span class="simple_link"><a href="schedule.html">Schedule<a/></span>
-			<span class="simple_link"><a href="journal.html">Journal<a/></span>
-			<span class="simple_link"><a href="about.html">About-Us<a/></span>
+			<span class="simple_link"><a href="index.html">News/Updates</a></span>
+			<span class="simple_link"><a href="description.html">Project-Description</a></span>
+			<span class="simple_link"><a href="schedule.html">Schedule</a></span>
+			<span class="simple_link"><a href="journal.html">Journal</a></span>
+			<span class="simple_link"><a href="about.html">About-Us</a></span>
 		</div>
 		<hr/>
         <section id="downloads">
@@ -36,6 +36,18 @@
     <div class="container">
       <section id="main_content">
 		<h1>Team Journal Logs</h1>
+		<div class="block_item">
+			<h2 style="line-height: 1em">March 26, 2014</h2>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
+			<p style="color: #FFFFFF">Son - Performed extensive research on planetary positioning. Found a Java library for astronomical
+				routines called <a href="http://mhuss.com/AstroLib/">AstroLib</a>.
+				Performed testing and found the heliocentric coordinates to be accurate to within at least three decimal places.
+				This will be good enough for the prototype. We may try to improve accuracy later on if given enough time. Updated website.
+			</p>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
+			<p>To be held Thursday, March 27.
+			</p>
+	    </div>
         <div class="block_item">
 			<h2 style="line-height: 1em">March 23, 2014</h2>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
@@ -63,6 +75,8 @@
 			<a href="http://www.braeunig.us/space/plntpos.htm">http://www.braeunig.us/space/plntpos.htm</a><br/>
 			<a href="http://en.wikipedia.org/wiki/Kepler's_laws_of_planetary_motion">http://en.wikipedia.org/wiki/Kepler's_laws_of_planetary_motion</a><br/>
 			<a href="http://www.stjarnhimlen.se/comp/tutorial.html">http://www.stjarnhimlen.se/comp/tutorial.html</a>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Java Libraries</h3>
+			<a href="http://mhuss.com/AstroLib/">AstroLib</a>
 	    </div>
       </section>
     </div>
