--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		<div class="block_item">
 			<h2 style="line-height: 1em">March 26, 2014</h2>
 			<p style="color: #FFFFFF">A screen shot from our prototype showing a simulation of planet orbits
-			using <a href="http://mhuss.com/AstroLib/">AstroLib</a> to get planetary positions. The sun and planets are not to scale.
+				using <a href="http://mhuss.com/AstroLib/">AstroLib</a> to get planetary positions. The sun and planets are not to scale
+				and some adjustments still needs to be made.
 			</p>
 			<img src="images/planet_orbits.jpg"/>
 	    </div>
