--- a/journal.html
+++ b/journal.html
@@ -43,6 +43,7 @@
 				routines called <a href="http://mhuss.com/AstroLib/">AstroLib</a>.
 				Performed testing and found the heliocentric coordinates to be accurate to within at least three decimal places.
 				This will be good enough for the prototype. We may try to improve accuracy later on if given enough time. Updated website.
+				Created a prototype for the project starting with the simulation of planetary positions and orbits. Committed it to repository.
 			</p>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
 			<p>To be held Thursday, March 27.
