--- a/about.html
+++ b/about.html
@@ -35,7 +35,8 @@
 
     <div class="container">
       <section id="main_content">
-		<h1>About-Us</h1>
+		<h1>About Us - Team Rocket</h1>
+		<p>Some people like to say things like, "It's not rocket science." In this situation, it is rocket science.</p>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Durell Plunkett</h2>
 			<p>Job Description: Project leader, head researcher, coder, tester</p>
