--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
       <section id="main_content">
 		<h1>News/Updates</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">March 28, 2014</h2>
+			<p style="color: #FFFFFF">Here's a look at the updated UI. Things are starting to flesh out. We can't
+				wait to start implementing the flight path!
+			</p>
+			<img src="images/updated_ui.jpg"/>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">March 27, 2014</h2>
 			<p style="color: #FFFFFF">Fixed a major bug that caused planets to skip portions of their orbits. Fixed
 				error in calculating Earth planetary position. Added a few things to the UI and functionality to the
