Updated website: March 28

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 		<div class="block_item">
 			<h2 style="line-height: 1em">March 28, 2014</h2>
 			<p style="color: #FFFFFF">Here's a look at the updated UI. Things are starting to flesh out. We can't
-				wait to start implementing the flight path!
+				wait to start implementing the flight path! Also, updated schedule.
 			</p>
 			<img src="images/updated_ui.jpg"/>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">March 27, 2014</h2>
 			<p style="color: #FFFFFF">Fixed a major bug that caused planets to skip portions of their orbits. Fixed
-				error in calculating Earth planetary position. Added a few things to the UI and functionality to the
+				error in calculating Earth's planetary position. Added a few things to the UI and functionality to the
 				selection of a launch date. The orbit simulation has been put into a separate class called OrbitSimulation.
 				To use it, change line 6 of MissionLaunch.java from: <p style="color: #b5e853">MissionVisual missionVisual = new MissionVisual(visualViewPort);</p>
 				to: <p style="color: #b5e853">OrbitSimulation missionVisual = new OrbitSimulation(visualViewPort);</p>
