--- a/journal.html
+++ b/journal.html
@@ -37,6 +37,19 @@
       <section id="main_content">
 		<h1>Team Journal Logs</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">March 27, 2014</h2>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
+			<p style="color: #FFFFFF">Durell - Compiled a new schedule for the project. Brainstorming changes to program
+				and the direction of the project.
+			</p>
+			<p style="color: #FFFFFF">Son - rechecked the math on planetary positioning. Performed a lot of debugging.
+				Modularized many parts of coding. Finished fleshing out the UI and added a bit of functionality to it.
+			</p>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
+			<p>Decided on new sub-goals for the project. The project seems more do-able now.
+			</p>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">March 26, 2014</h2>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
 			<p style="color: #FFFFFF">Son - Performed extensive research on planetary positioning. Found a Java library for astronomical
