--- a/schedule.html
+++ b/schedule.html
@@ -39,37 +39,60 @@
         <div class="block_item">
 			<h2 style="line-height: 1em">Phase 1</h2>
 			<p>Estimated Deadline: March 23, 2014</p>
-			<p>Establish relevant sources of data.</p>
+			<p>Handled by: Durell and Son</p>
+			<p>Goal: Gather requirements and analyze the problem space. Devise solution to problem.</p>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 2</h2>
 			<p>Estimated Deadline: April 1, 2014</p>
-			<p>Generate user stories.</p>
+			<p>Handled by: Son</p>
+			<p>Goal: Implement planet orbits and visuals for planets.</p>
+			<p>-Find a way to calculate planetary positions for a given date and time.</p>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 3</h2>
-			<p>Estimated Deadline: April 4, 2014</p>
-			<p>Choose platform and language for project program development.</p>
+			<p>Estimated Deadline: April 7, 2014</p>
+			<p>Handled by: </p>
+			<p>Goal: Implement shuttle's travel path.</p>
+			<p>-Devise an algorithm to plan a shuttle's flight path. Consider using time steps.</p>
+			<p>-Simple flights with no intermediate planets.</p>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 4</h2>
-			<p>Estimated Deadline: April 16, 2014</p>
-			<p>Create CRC cards, class diagrams, and flow charts for program design.</p>
+			<p>Estimated Deadline: April 14, 2014</p>
+			<p>Handled by: Son</p>
+			<p>Goal: Create visuals for shuttle's travel path.</p>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 5</h2>
-			<p>Estimated Deadline: April 26, 2014</p>
-			<p>Finalize coding and testing.</p>
+			<p>Estimated Deadline: April 21, 2014</p>
+			<p>Handled by: </p>
+			<p>Goal: Adjust pathfinding to take intermediate planets and the effects of their gravitational
+				fields into account.
+			</p>
+			<p>-Research the effects of gravity and find a way to calculate the radius of the gravitational fields
+				of planets.
+			</p>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 6</h2>
-			<p>Estimated Deadline: May 2, 2014</p>
-			<p>Finalize debugging and profiling.</p>
+			<p>Estimated Deadline: April 28, 2014</p>
+			<p>Handled by: </p>
+			<p>Goal: Adjust and create different algorithms for figuring out travel paths.</p>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 7</h2>
+			<p>Estimated Deadline: May 2, 2014</p>
+			<p>Handled by: Durell and Son</p>
+			<p>Goal: Finalize debugging and profiling. Create a user manual for the program. Finalize
+				information on the website.
+			</p>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">Phase 8</h2>
 			<p>Estimated Deadline: May 5, 2014</p>
-			<p>Finalize preparations for in-class project presentation.</p>
+			<p>Handled by: Durell and Son</p>
+			<p>Goal: Finalize preparations for in-class project presentation.</p>
 	    </div>
       </section>
     </div>
