--- a/description.html
+++ b/description.html
@@ -48,6 +48,22 @@
 			</p>
 	    </div>
 		<div class="block_item">
+			<h2 style="line-height: 1em">Instructions for Compiling and Running</h2>
+			<h3>Requirements:</h3>
+			<ul><li>This program requires Java 1.7 and up in order to compile and run.</li></ul>
+			<h3>To Compile:</h3>
+			<ol>
+				<li>Open command prompt.</li>
+				<li>Go to the directory source/</li>
+				<li>Enter the command: javac -d classes -classpath classes/AbsoluteLayout.jar -sourcepath src src/missionlaunch/*.java</li>
+			</ol>
+			<h3>To Run:</h3>
+			<ol>
+				<li>Go to the directory source/classes/</li>
+				<li>Enter the command: java -classpath .;AbsoluteLayout.jar missionlaunch.MissionLaunch</li>
+			</ol>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">How to Use the Program</h2>
 			<p>To be added later on as the project progresses.</p>
 	    </div>
