--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		<div class="block_item">
 			<h2 style="line-height: 1em">March 28, 2014</h2>
 			<p style="color: #FFFFFF">Here's a look at the updated UI. Things are starting to flesh out. We can't
-				wait to start implementing the flight path! Also, updated schedule.
+				wait to start implementing the flight path! Also, updated schedule and added instructions for compiling
+				and running in the section <span><a href="description.html">Project-Description</a></span>.
 			</p>
 			<img src="images/updated_ui.jpg"/>
 	    </div>
