--- a/journal.html
+++ b/journal.html
@@ -44,6 +44,7 @@
 			</p>
 			<p style="color: #FFFFFF">Son - rechecked the math on planetary positioning. Performed a lot of debugging.
 				Modularized many parts of coding. Finished fleshing out the UI and added a bit of functionality to it.
+				Added instructions for compiling and running the program. Fixed a few files so that the program will compile.
 			</p>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
 			<p>Decided on new sub-goals for the project. The project seems more do-able now.
