--- a/schedule.html
+++ b/schedule.html
@@ -52,7 +52,7 @@
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 3</h2>
 			<p>Estimated Deadline: April 7, 2014</p>
-			<p>Handled by: </p>
+			<p>Handled by: Durell</p>
 			<p>Goal: Implement shuttle's travel path.</p>
 			<p>-Devise an algorithm to plan a shuttle's flight path. Consider using time steps.</p>
 			<p>-Simple flights with no intermediate planets.</p>
@@ -62,6 +62,10 @@
 			<p>Estimated Deadline: April 14, 2014</p>
 			<p>Handled by: Son</p>
 			<p>Goal: Create visuals for shuttle's travel path.</p>
+			<p>Handled by: Durell</p>
+			<p>Goal: Adjust pathfinding algorithm to take into account fuel usage and the effects 
+				of a planet's gravitational field.
+			</p>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 5</h2>
