--- a/schedule.html
+++ b/schedule.html
@@ -47,15 +47,19 @@
 			<p>Estimated Deadline: April 1, 2014</p>
 			<p>Handled by: Son</p>
 			<p>Goal: Implement planet orbits and visuals for planets.</p>
-			<p>-Find a way to calculate planetary positions for a given date and time.</p>
+			<ul>
+				<li>Find a way to calculate planetary positions for a given date and time.</li>
+			</ul>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 3</h2>
 			<p>Estimated Deadline: April 7, 2014</p>
 			<p>Handled by: Durell</p>
 			<p>Goal: Implement shuttle's travel path.</p>
-			<p>-Devise an algorithm to plan a shuttle's flight path. Consider using time steps.</p>
-			<p>-Simple flights with no intermediate planets.</p>
+			<ul>
+				<li>Devise an algorithm to plan a shuttle's flight path. Consider using time steps.</li>
+				<li>Simple flights with no intermediate planets.</li>
+			</ul>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 4</h2>
@@ -66,6 +70,11 @@
 			<p>Goal: Adjust pathfinding algorithm to take into account fuel usage and the effects 
 				of a planet's gravitational field.
 			</p>
+			<ul>
+				<li>Research the effects of gravity and find a way to calculate the radius of the gravitational fields
+					of planets.
+				</li>
+			</ul>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Phase 5</h2>
@@ -73,9 +82,6 @@
 			<p>Handled by: </p>
 			<p>Goal: Adjust pathfinding to take intermediate planets and the effects of their gravitational
 				fields into account.
-			</p>
-			<p>-Research the effects of gravity and find a way to calculate the radius of the gravitational fields
-				of planets.
 			</p>
 	    </div>
 		<div class="block_item">
