Update Journal for March 31

--- a/journal.html
+++ b/journal.html
@@ -37,6 +37,17 @@
       <section id="main_content">
 		<h1>Team Journal Logs</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">March 31, 2014</h2>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
+			<p>Evaluated current state of the project and what to do next. We went over everything that has been implemented 
+				so far. Our subgoals were further refined. As for allocated work: 
+			</p>
+			<ul>
+				<li>Durell will be figuring out an algorithm for planning a shuttle's flight path. </li>
+				<li>Son will be working on creating visuals for the flight path. </li>
+			</ul>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">March 27, 2014</h2>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
 			<p style="color: #FFFFFF">Durell - Compiled a new schedule for the project. Brainstorming changes to program
@@ -79,7 +90,9 @@
 		<h1 style="margin-top: 30px">Research Material</h1>
 		<p>The following are links to sources that we're using for our project's research:</p>
         <div class="block_item">
-			<h3 style="line-height: 1em; text-decoration: underline">Shuttle Launch Info</h3>
+			<h3 style="line-height: 1em; text-decoration: underline">Developer Notes</h3>
+			<a href="Liftoff_Notes.txt">Liftoff Notes</a>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Shuttle Launch Info</h3>
 			<a href="http://science.howstuffworks.com/space-shuttle.htm">http://science.howstuffworks.com/space-shuttle.htm</a>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Planet Facts</h3>
 			<a href="http://nssdc.gsfc.nasa.gov/planetary/planetfact.html">http://nssdc.gsfc.nasa.gov/planetary/planetfact.html</a>
