--- a/schedule.html
+++ b/schedule.html
@@ -95,14 +95,8 @@
 			<p>Estimated Deadline: May 2, 2014</p>
 			<p>Handled by: Durell and Son</p>
 			<p>Goal: Finalize debugging and profiling. Create a user manual for the program. Finalize
-				information on the website.
+				information on the website. Finalize preparations for in-class project presentation.
 			</p>
-	    </div>
-		<div class="block_item">
-			<h2 style="line-height: 1em">Phase 8</h2>
-			<p>Estimated Deadline: May 5, 2014</p>
-			<p>Handled by: Durell and Son</p>
-			<p>Goal: Finalize preparations for in-class project presentation.</p>
 	    </div>
       </section>
     </div>
