Updated with April 4th meeting

--- a/journal.html
+++ b/journal.html
@@ -37,6 +37,18 @@
       <section id="main_content">
 		<h1>Team Journal Logs</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">April 4, 2014</h2>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
+			<p>Discussed ways to approach and handle a path finding algorithm. Main things to consider:
+			</p>
+			<ul>
+				<li>The initial starting point and launch angle of time step t0, for use in calculating time step t1.</li>
+				<li>Keeping track of the shuttle's location at all times.</li>
+				<li>A space shuttle's maximum velocity.</li>
+				<li>Preventing the shuttle from making unrealistic turns.</li>
+			</ul>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">March 31, 2014</h2>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
 			<p>Evaluated current state of the project and what to do next. We went over everything that has been implemented 
@@ -92,6 +104,8 @@
         <div class="block_item">
 			<h3 style="line-height: 1em; text-decoration: underline">Developer Notes</h3>
 			<a href="Liftoff_Notes.txt">Liftoff Notes</a>
+			<a href="launch_equation.txt">Preliminary Launch Equation Notes</a>
+			<a href="Julian_Date.txt">Julian Dates</a>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Shuttle Launch Info</h3>
 			<a href="http://science.howstuffworks.com/space-shuttle.htm">http://science.howstuffworks.com/space-shuttle.htm</a>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Planet Facts</h3>
