--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <div class="container">
       <section id="main_content">
 		<h1>About Us - Team Rocket</h1>
-		<p>Some people like to say things like, "It's not rocket science." In this situation, <span style="text-decoration:underline">it is rocket science.</span></p>
+		<p>Some people like to say things like, "It's so simple. It's not rocket science." In this situation, <span style="text-decoration:underline">it is rocket science.</span></p>
 		<div class="block_item">
 			<h2 style="line-height: 1em">Durell Plunkett</h2>
 			<p>Job Description: Project leader, head researcher, coder, tester</p>
