--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       <section id="main_content">
 		<h1>News/Updates</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">April 8, 2014</h2>
+			<p style="color: #FFFFFF">Today, we learned something new. Planets travel very fast.
+			</p>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">March 28, 2014</h2>
 			<p style="color: #FFFFFF">Here's a look at the updated UI. Things are starting to flesh out. We can't
 				wait to start implementing the flight path! Also, updated schedule and added instructions for compiling
