--- a/journal.html
+++ b/journal.html
@@ -37,6 +37,12 @@
       <section id="main_content">
 		<h1>Team Journal Logs</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">April 7, 2014</h2>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
+			<p>Discussed actual algorithm to be implemented. Due to a busy schedule, it won't be implemented until April 9, 2014.
+			</p>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">April 4, 2014</h2>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
 			<p>Discussed ways to approach and handle a path finding algorithm. Main things to consider:
@@ -103,9 +109,9 @@
 		<p>The following are links to sources that we're using for our project's research:</p>
         <div class="block_item">
 			<h3 style="line-height: 1em; text-decoration: underline">Developer Notes</h3>
-			<a href="Liftoff_Notes.txt">Liftoff Notes</a>
-			<a href="launch_equation.txt">Preliminary Launch Equation Notes</a>
-			<a href="Julian_Date.txt">Julian Dates</a>
+			<a href="Liftoff_Notes.txt">Liftoff Notes</a><br/>
+			<a href="launch_equation.txt">Preliminary Launch Equation Notes</a><br/>
+			<a href="Julian_Date.txt">Julian Dates</a><br/>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Shuttle Launch Info</h3>
 			<a href="http://science.howstuffworks.com/space-shuttle.htm">http://science.howstuffworks.com/space-shuttle.htm</a>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Planet Facts</h3>
