Updated first flight

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 			<h2 style="line-height: 1em">April 8, 2014</h2>
 			<p style="color: #FFFFFF">Today, we learned something new. Planets travel very fast.
 			</p>
+			<p style="color: #FFFFFF">Behold, our first test flight. And we only crashed into Mercury once!
+			</p>
+			<img src="images/first_flight.jpg"/>
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">March 28, 2014</h2>
