--- a/journal.html
+++ b/journal.html
@@ -37,9 +37,22 @@
       <section id="main_content">
 		<h1>Team Journal Logs</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">April 11, 2014</h2>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
+			<p>Discussed changes to be made to the pathfinding algorithm.
+			</p>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
+			<p style="color: #FFFFFF">Son - Changed the system so that the shuttle is being moved by vectors instead of
+				having its location determined by triangulating its polar coordinates of where it's supposed to be.
+			</p>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">April 7, 2014</h2>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
 			<p>Discussed actual algorithm to be implemented. Due to a busy schedule, it won't be implemented until April 9, 2014.
+			</p>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
+			<p style="color: #FFFFFF">Durell - Presented the pathfinding algorithm to be used.
 			</p>
 	    </div>
 		<div class="block_item">
