--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
       <section id="main_content">
 		<h1>News/Updates</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">April 11, 2014</h2>
+			<p style="color: #FFFFFF">Switched from triangulating the shuttle's polar coordinates to actually using 
+				vectors to move the shuttle. The system is now prepped to have gravitational forces to be applied to the shuttle.
+			</p>
+			<p style="color: #FFFFFF">Updated the source code.
+			</p>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">April 8, 2014</h2>
 			<p style="color: #FFFFFF">Today, we learned something new. Planets travel very fast.
 			</p>
