--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
       <section id="main_content">
 		<h1>News/Updates</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">April 21, 2014</h2>
+			<p style="color: #FFFFFF">Added gravitational forces. Still buggy though. Expanded the view of the program. Didn't update source
+				code yet. No collision detection yet either.
+			</p>
+			<img src="images/gravity_test.jpg"/>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">April 11, 2014</h2>
 			<p style="color: #FFFFFF">Switched from triangulating the shuttle's polar coordinates to actually using 
 				vectors to move the shuttle. The system is now prepped to have gravitational forces to be applied to the shuttle.
