Updated Journal section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="block_item">
 			<h2 style="line-height: 1em">April 21, 2014</h2>
 			<p style="color: #FFFFFF">Added gravitational forces. Still buggy though. Expanded the view of the program. Didn't update source
-				code yet. No collision detection yet either.
+				code yet. No collision detection yet either. Updated Developer Notes in Journal section.
 			</p>
 			<img src="images/gravity_test.jpg"/>
 	    </div>
