--- a/journal.html
+++ b/journal.html
@@ -125,6 +125,8 @@
 			<a href="Liftoff_Notes.txt">Liftoff Notes</a><br/>
 			<a href="launch_equation.txt">Preliminary Launch Equation Notes</a><br/>
 			<a href="Julian_Date.txt">Julian Dates</a><br/>
+			<a href="pathfinding (draft 1).txt">Pathfinding - draft</a><br/>
+			<a href="Gravity.txt">Gravity</a><br/>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Shuttle Launch Info</h3>
 			<a href="http://science.howstuffworks.com/space-shuttle.htm">http://science.howstuffworks.com/space-shuttle.htm</a>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Planet Facts</h3>
