--- a/about.html
+++ b/about.html
@@ -52,6 +52,8 @@
 			<p style="position: relative; left: 10px; bottom: 0px;">About: Son Pham is a computer science undergrad at LSU. He has a bit of proficiency in Java
 			    as well as minor experience in web design, JavaScript, and shell programming.
 			</p>
+			<p style="position: relative; left: 10px; bottom: 0px;">"The thing that I love most about this project is that I get to explore Uranus." -Son
+			</p>
 	    </div>
       </section>
     </div>
