--- a/test/test.html
+++ b/test/test.html
@@ -10,15 +10,23 @@
 			}
 			#test_box {
 				position: absolute;
-				top: 20px;
+				top: 100px;
 				left: 20px;
 				height: 500px;
 				width: 500px;
 				background-color: #444444;
 			}
+			span{
+				font-size: 36px;
+				color: #EEEEEE;
+			}
 		</style>
 	</head>
 	<body>
+		<div>
+			<span>Double click to reset the balls.</span><br/>
+			<span>Drag them down to take them out of the container.</span>
+		</div>
 		<div id="test_box">
 			
 		</div>
