--- a/test/test.html
+++ b/test/test.html
@@ -9,9 +9,9 @@
 				overflow: hidden;
 			}
 			#test_box {
-				position: absolute;
-				top: 100px;
-				left: 20px;
+				position: relative;
+				top: 0px;
+				left: 0px;
 				height: 500px;
 				width: 500px;
 				background-color: #444444;
@@ -23,12 +23,12 @@
 		</style>
 	</head>
 	<body>
+		<div id="test_box">
+			
+		</div>
 		<div>
 			<span>Double click to reset the balls.</span><br/>
 			<span>Drag them down to take them out of the container.</span>
-		</div>
-		<div id="test_box">
-			
 		</div>
 		<script src="protoclass.js"></script>
 		<script src="box2d.js"></script>
