--- a/journal.html
+++ b/journal.html
@@ -37,6 +37,13 @@
       <section id="main_content">
 		<h1>Team Journal Logs</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">April 23, 2014</h2>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
+			<p>Discussed wrapping the project up for next week's presentation. We'll finish up implementing gravity, then the shuttle's acceleration, fuel usage,
+				and collision detection. We'll be calling it quits after that. There just isn't enough time for anything else.
+			</p>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">April 11, 2014</h2>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
 			<p>Discussed changes to be made to the pathfinding algorithm.
