Final web updates

--- a/description.html
+++ b/description.html
@@ -65,7 +65,18 @@
 	    </div>
 		<div class="block_item">
 			<h2 style="line-height: 1em">How to Use the Program</h2>
-			<p>To be added later on as the project progresses.</p>
+			<img src="images/use.jpg"/>
+			<p>To use the program:</p>
+			<ol>
+				<li>Set the origin, which is the planet that you're launching from.</li>
+				<li>Set the destination, the target that you're launching the rocket to.</li>
+				<li>Specify a launch date.</li>
+				<li>Set the starting velocity of the rocket. This is the velocity the rocket assumes after leaving the origin.</li>
+				<li>Click "Launch".</li>
+			</ol>
+			<p>To program will print out the results of the flight in the "Results" box. If at any point in flight, you would like
+				to stop the rocket, click "Stop". Also, the current time of the flight is shown in the upper left corner of the screen.
+			</p>
 	    </div>
       </section>
     </div>
