--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
       <section id="main_content">
 		<h1>News/Updates</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">April 30, 2014</h2>
+			<p style="color: #FFFFFF">Looks like we'll be bringing this project to an end. Tomorrow's the big day and we're pretty
+				excited about it. Here's a look at the final program. The source code has been update and description page has been
+				updated as well, with instructions on how to use the program.
+			</p>
+			<img src="images/last.jpg"/>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">April 26, 2014</h2>
+			<p style="color: #FFFFFF">Made some improvements to path finding and gravity. Still no source code update yet.
+			</p>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">April 21, 2014</h2>
 			<p style="color: #FFFFFF">Added gravitational forces. Still buggy though. Expanded the view of the program. Didn't update source
 				code yet. No collision detection yet either. Updated Developer Notes in Journal section.
