--- a/journal.html
+++ b/journal.html
@@ -37,6 +37,25 @@
       <section id="main_content">
 		<h1>Team Journal Logs</h1>
 		<div class="block_item">
+			<h2 style="line-height: 1em">April 30, 2014</h2>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
+			<p>Discussed plans for tomorrow's presentation.
+			</p>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
+			<p>Made adjustments and applied some tweaks to the algorithm as well as the calculation of gravity.
+			</p>
+			<p>Most adjustments ended in failure and had to be thrown out.
+			</p>
+	    </div>
+		<div class="block_item">
+			<h2 style="line-height: 1em">April 26, 2014</h2>
+			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
+			<p>Made adjustments and applied some tweaks to the algorithm as well as the calculation of gravity.
+			</p>
+			<p>Performed further testing.
+			</p>
+	    </div>
+		<div class="block_item">
 			<h2 style="line-height: 1em">April 23, 2014</h2>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Meetings</h3>
 			<p>Discussed wrapping the project up for next week's presentation. We'll finish up implementing gravity, then the shuttle's acceleration, fuel usage,
