--- a/description.html
+++ b/description.html
@@ -74,7 +74,7 @@
 				<li>Set the starting velocity of the rocket. This is the velocity the rocket assumes after leaving the origin.</li>
 				<li>Click "Launch".</li>
 			</ol>
-			<p>To program will print out the results of the flight in the "Results" box. If at any point in flight, you would like
+			<p>The program will print out the results of the flight in the "Results" box. If at any point in flight, you would like
 				to stop the rocket, click "Stop". Also, the current time of the flight is shown in the upper left corner of the screen.
 			</p>
 	    </div>
