fixed more typos

--- a/journal.html
+++ b/journal.html
@@ -50,9 +50,10 @@
 		<div class="block_item">
 			<h2 style="line-height: 1em">April 26, 2014</h2>
 			<h3 style="line-height: 1em; text-decoration: underline; margin-top: 20px">Progress</h3>
-			<p>Made adjustments and applied some tweaks to the algorithm as well as the calculation of gravity.
+			<p>Made adjustments and applied some tweaks to the algorithm as well as the calculation of gravity. Added
+				collision detection, fuel usage, and shuttle acceleration based on Durell's notes.
 			</p>
-			<p>Performed further testing.
+			<p>Performed extensive testing.
 			</p>
 	    </div>
 		<div class="block_item">
