--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="block_item">
 			<h2 style="line-height: 1em">April 30, 2014</h2>
 			<p style="color: #FFFFFF">Looks like we'll be bringing this project to an end. Tomorrow's the big day and we're pretty
-				excited about it. Here's a look at the final program. The source code has been update and the description page has been
+				excited about it. Here's a look at the final program. The source code has been updated and the description page has been
 				updated as well, with instructions on how to use the program.
 			</p>
 			<img src="images/last.jpg"/>
